--- a/frontend/justiapp/src/index.css
+++ b/frontend/justiapp/src/index.css
@@ -1,4 +1,14 @@
 /* index.css */
+@import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Roboto:wght@400;700&display=swap');
+
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+body, #root {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    height: 100vh; /* Esto centra verticalmente también */
+    margin: 0;
+  }
