feat: maquetar homepage para administrador

--- a/frontend/justiapp/src/index.css
+++ b/frontend/justiapp/src/index.css
@@ -4,11 +4,17 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+/* Clase personalizada para el botón primario */
+.btn-custom-primary {
+  @apply btn w-80 h-14 px-4 py-3.5 bg-gray-700 text-white border border-gray-700 rounded-lg flex justify-center items-center gap-2;
+}
 
 body, #root {
-    display: flex;
-    justify-content: center;
-    align-items: center;
-    height: 100vh; /* Esto centra verticalmente también */
-    margin: 0;
-  }
+  display: flex;
+  
+  justify-content: center; /* Centra horizontalmente */
+  align-items: flex-start; /* Alinea al inicio verticalmente */
+  height: 100vh;
+  margin: 0;
+  width: 100%;
+}
