--- a/frontend/justiapp/src/index.css
+++ b/frontend/justiapp/src/index.css
@@ -1,19 +1,17 @@
 /* index.css */
 @import url('https://fonts.googleapis.com/css2?family=Lato:wght@400;700&family=Roboto:wght@400;700&display=swap');
-
-@tailwind base;
-@tailwind components;
-@tailwind utilities;
-@tailwind screens;
+@import "tailwindcss/base";
+@import "tailwindcss/components";
+@import "tailwindcss/utilities";
 
 /* Clase personalizada para el botón primario */
-@layer components {
-  .btn-custom-primary {
-    @apply btn w-80 h-14 px-4 py-3.5 bg-gray-700 text-white border border-gray-700 rounded-lg flex justify-center items-center gap-2;
-  }
+.btn-custom-primary {
+  @apply btn w-80 h-14 px-4 py-3.5 bg-gray-700 text-white border border-gray-700 rounded-lg flex justify-center items-center gap-2;
 }
 
-
+.fill-current {
+  fill: currentColor;
+}
 .border-gradient {
   border: 4px solid;
   border-image-slice: 1;
@@ -27,11 +25,8 @@
   );
 }
 
-
-
 body, #root {
   display: flex;
-  
   justify-content: center; /* Centra horizontalmente */
   align-items: flex-start; /* Alinea al inicio verticalmente */
   height: 100vh;
